  * wnpp-check:
    + Use getopt to handle argument parsing.
    + Add --exact switch to match the exact package name instead of a
      substring.  Thanks to Balasankar C.  (Closes: #791918)
  * Replace manual parsing of dpkg-buildpackage's output with the use of its
    -S switch or the Dpkg::Changelog::Parse Perl module.
    + Bump minimum required version of dpkg-dev to 1.17.0

  [ Dominique Dumont ]
  * licensecheck:
    * extract © owner when © and owners are specified on 2 or more lines.
    * fix digia © and license extraction (Closes: #789074)
    * fix BSD-2-clause detection
    * parse assembly files with suffix .S
    * warn if scanned file is not a text file (Closes: #791756)

  [ Mattia Rizzolo ]
  * uscan: Suggest the correct syntax in the manpage for the dversionmangle
    option, escaping a '+'. Thanks to Martin Erik Werner for reporting.
    (Closes: #789389)

 -- Paul Wise <pabs@debian.org>  Wed, 17 Jun 2015 09:51:15 +0800

devscripts (2.15.5) unstable; urgency=low

  [ Cyril Brulebois ]
  * Update chdist bash-completion file with the architectures currently (as
    of 2015-04-28) listed on buildd.debian.org and buildd.debian-ports.org.
    (Closes: #783634)
  * Add support for RMADISON_SSL_CA_FILE and RMADISON_SSL_CA_PATH, so that
    one can point to system-specific locations for CA-related files, and pass
    them to curl/wget via the appropriate options.  (Closes: #784812)

  [ James McCoy ]
  * wrap-and-sort:
    + Always remove empty elements from lists so “-t” doesn't add a new, empty
      element.  (Closes: #783630)
    + Remove empty lines in debhelper-related files.  (Closes: #780667)
  * Install Perl modules into $Config{vendorlib} and remove the hacks in
    various scripts to make them see devscript's modules.
  * Add bash completion scripts for uscan (thanks to Ben Finney) and
    mk-origtargz.  (Closes: #784394)
  * Stop building and shipping libvfork.so since strace has handled vforks for
    at least a decade.